--- a/wrangler.toml
+++ b/wrangler.toml
@@ -25,7 +25,7 @@ pages_build_output_dir = ".svelte-kit/cloudflare"
 
 # Bind a D1 database. D1 is Cloudflare’s native serverless SQL database.
 # Docs: https://developers.cloudflare.com/pages/functions/bindings/#d1-databases
-# [[d1_databases]]
+[[d1_databases]]
 binding = "mDB"
 database_name = "qydata"
 database_id = "01249003-c8fb-4a9a-8db5-5399be8b4b14"
