--- a/wrangler.toml
+++ b/wrangler.toml
@@ -27,8 +27,8 @@ pages_build_output_dir = ".svelte-kit/cloudflare"
 # Docs: https://developers.cloudflare.com/pages/functions/bindings/#d1-databases
 [[d1_databases]]
 binding = "mDB"
-database_name = "qydata"
-database_id = "01249003-c8fb-4a9a-8db5-5399be8b4b14"
+database_name = "qy-db"
+database_id = "b4f23c85-03d1-42bd-a544-2cf21cc52ab3"
 
 # Bind a Durable Object. Durable objects are a scale-to-zero compute primitive based on the actor model.
 # Durable Objects can live for as long as needed. Use these when you need a long-running "server", such as in realtime apps.
