--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@sveltejs/kit": "^2.9.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
     "autoprefixer": "^10.4.20",
+    "flowbite": "^3.1.2",
+    "flowbite-svelte": "^0.48.4",
+    "flowbite-svelte-icons": "^2.0.3",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
     "tailwindcss": "^3.4.9",
