--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.15",
-    "svelte-table": "^0.6.4"
+    "axios": "^1.9.0",
+    "https": "^1.0.0",
+    "svelte-table": "^0.6.4",
+    "ws": "^8.18.2"
   }
 }
