--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.5.15",
     "axios": "^1.9.0",
+    "echarts": "^5.6.0",
     "svelte-table": "^0.6.4",
     "ws": "^8.18.2"
   }
